fixed select spacing

--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/static_source/css/base/_forms.scss
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/static_source/css/base/_forms.scss
@@ -75,7 +75,7 @@ $background-color: #fff;
   > .input-box { // div with styling hook
     @apply flex items-center h-full relative overflow-x-hidden overflow-ellipsis;
 
-    &.input {
+    &.input, &.select {
       @apply mx-4;
     }
     &.textarea {
